--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@ isHome: true
 {% highlight html %}
 <script src="dist/jquery/jquery.min.js"></script>
 <script src="dist/jquery-ui/jquery-ui.min.js"></script>
-<script src="dist/jquery-highlighttextarea/jquery.highlighttextarea.min.js"></script>
+<script src="https://cdn.rawgit.com/PlanHubMe/jquery-highlighttextarea/master/jquery.highlighttextarea.js"></script>
 {% endhighlight %}
 
   <p>...and include the stylesheet as well as jQueryUI one.</p>
 {% highlight html %}
 <link rel="stylesheet" href="dist/jquery-ui/theme/jquery-ui.min.css">
-<link rel="stylesheet" href="dist/jquery-highlighttextarea/jquery.highlighttextarea.min.css">
+<link rel="stylesheet" href="https://cdn.rawgit.com/PlanHubMe/jquery-highlighttextarea/master/jquery.highlighttextarea.css">
 {% endhighlight %}
 </section>
 
