wait don't cache it

--- a/examples.html
+++ b/examples.html
@@ -100,9 +100,9 @@ $('textarea').highlightTextarea({
 
 
 <link rel="stylesheet" href="{{site.github.url}}/dist/jquery-ui/themes/smoothness/jquery-ui.min.css">
-<link rel="stylesheet" href="https://cdn.rawgit.com/PlanHubMe/jquery-highlighttextarea/master/jquery.highlighttextarea.css">
+<link rel="stylesheet" href="https://rawgit.com/PlanHubMe/jquery-highlighttextarea/master/jquery.highlighttextarea.css">
 <script src="{{site.github.url}}/dist/jquery-ui/ui/minified/jquery-ui.min.js"></script>
-<script src="https://cdn.rawgit.com/PlanHubMe/jquery-highlighttextarea/master/jquery.highlighttextarea.js"></script>
+<script src="https://rawgit.com/PlanHubMe/jquery-highlighttextarea/master/jquery.highlighttextarea.js"></script>
 
 <script>
 $('#demo-case').highlightTextarea({
