--- a/examples.html
+++ b/examples.html
@@ -15,7 +15,7 @@ $('textarea').highlightTextarea({
   words: ['Lorem', 'ipsum'],
   firstWord: true
 });
-{% endhighlight %}>
+{% endhighlight %}
 
   <h3 id="case">Case insensitive</h3>
   <div class="bs-example">
