--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ isHome: true
 <section class="bs-docs-section">
   <h1 id="overview" class="page-header">Overview</h1>
   <blockquote>
-    highlightTextarea aim is to highlight portions of text into a <code>textarea</code> or a <code>input</code>. It can highlight a set of words or a specific range.
+    highlightTextarea aim is to highlight portions of text into a <code>textarea</code> or a <code>input</code>. It can highlight a set of words or a specific range. It is an updated version designed for usage with <a href="https://planhub.me">PlanHub</a>.
   </blockquote>
 
   <h3 id="example">Example</h3>
