--- a/examples.html
+++ b/examples.html
@@ -19,7 +19,8 @@ $('textarea').highlightTextarea({
 
   <h3 id="tagTest">Tag test</h3>
   <div class="bs-example">
-    <textarea id="demo-tagTest" cols="50" rows="3">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at massa non erat convallis vulputate molestie nec dui. Donec auctor blandit nibh quis luctus. Donec tincidunt auctor consequat.</textarea>
+    <textarea id="demo-tagTest" cols="50" rows="3">HW something
+    Test something</textarea>
   </div>
 {% highlight javascript %}
 $('textarea').highlightTextarea({
