--- a/examples.html
+++ b/examples.html
@@ -31,7 +31,8 @@ $('textarea').highlightTextarea({
     color: '#DC143C',
     words: ['Test']
   }],
-  firstWord: true
+  firstWord: true,
+  caseSensitive: false
 });
 {% endhighlight %}
 
@@ -147,7 +148,8 @@ $('#demo-tagTest').highlightTextarea({
     color: '#DC143C',
     words: ['Test']
   }],
-  firstWord: true
+  firstWord: true,
+  caseSensitive: false
 });
 
 $('#demo-case').highlightTextarea({
