--- a/examples.html
+++ b/examples.html
@@ -20,7 +20,8 @@ $('textarea').highlightTextarea({
   <h3 id="tagTest">Tag test</h3>
   <div class="bs-example">
     <textarea id="demo-tagTest" cols="50" rows="3">HW something
-Test something</textarea>
+Test something
+not a tag</textarea>
   </div>
 {% highlight javascript %}
 $('textarea').highlightTextarea({
