--- a/examples.html
+++ b/examples.html
@@ -26,10 +26,10 @@ not a tag</textarea>
 {% highlight javascript %}
 $('textarea').highlightTextarea({
   words: [{
-    color: '#4c6c9b',
+    color: 'tag-hw',
     words: ['HW']
   }, {
-    color: '#DC143C',
+    color: 'tag-test',
     words: ['Test']
   }],
   firstWord: true,
@@ -80,10 +80,10 @@ $('textarea').highlightTextarea({
 {% highlight javascript %}
 $('textarea').highlightTextarea({
   words: [{
-    color: '#ADF0FF',
+    color: 'highlight-alt',
     words: ['Lorem ipsum', 'vulputate']
   }, {
-    color: '#FFFF00',
+    color: 'highlight',
     words: ['Donec']
   }]
 });
