--- a/examples.html
+++ b/examples.html
@@ -80,10 +80,10 @@ $('textarea').highlightTextarea({
 {% highlight javascript %}
 $('textarea').highlightTextarea({
   words: [{
-    color: 'highlight-alt',
+    color: 'text-highlight-alt',
     words: ['Lorem ipsum', 'vulputate']
   }, {
-    color: 'highlight',
+    color: 'text-highlight',
     words: ['Donec']
   }]
 });
@@ -143,10 +143,10 @@ $('#demo-firstWord').highlightTextarea({
 
 $('#demo-tagTest').highlightTextarea({
   words: [{
-    color: '#4c6c9b',
+    color: 'tag-hw',
     words: ['HW']
   }, {
-    color: '#DC143C',
+    color: 'tag-test',
     words: ['Test']
   }],
   firstWord: true,
@@ -169,10 +169,10 @@ $('#demo-regex').highlightTextarea({
 
 $('#demo-multiple').highlightTextarea({
   words: [{
-    color: '#ADF0FF',
+    color: 'text-highlight-alt',
     words: ['Lorem ipsum', 'vulputate']
   }, {
-    color: '#FFFF00',
+    color: 'text-highlight',
     words: ['Donec']
   }]
 });
