--- a/examples.html
+++ b/examples.html
@@ -202,3 +202,13 @@ $('#demo-custom').highlightTextarea({
   border:1px solid pink;
 }
 </style>
+<style type="text/css">
+.tag-hw {
+  background-color: #4c6c9b;
+  color: white;
+}
+.tag-test {
+  background-color: #dc143c;
+  color: white;
+}
+</style>
